# python-ismrmrd-server

./: .gitignore  Makefile  bartfire.py  client.py  dicom2mrd.py  generate_cartesian_shepp_logan_dataset.py  main.py  mrd2dicom.py  mrd2gif.py  mrdhelper.py  pyproject.toml  readme.md  server.py  simplefft.py  single-shot.sh  spectroscopy.py  start-fire-python-server.sh  sync-code-and-start-fire-python-server.sh
.github/workflows/: docker-image.yml
config/: __init__.py  analyzeflow.py  bartfire.py  helloworld.py  invertcontrast.py  null.py  report.py  rgb.py  saveall.py  saveimages.py  simplefft.py
docker/: Dockerfile  docker_tar_to_chroot.sh
docker/bart/: Dockerfile
tests/: test_invert.py
tests/helpers/: __init__.py
